# prisma-rust-schema

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/workflows/: prisma-compatibility.yml  rust-test.yml
prisma/: no-annotation-schema.prisma  schema.prisma  test.prisma
src/: annotation.rs  code.rs  config.rs  dmmf.rs  jsonrpc.rs  lib.rs  main.rs  transform.rs  typed_sql.rs
tests/: cli.rs  import_options.rs  schema.rs  simple.rs
