[package]
name = "prisma-rust-schema"
version = "0.5.0"
edition = "2024"
authors = ["Shaun Hamilton <shauhami020@gmail.com>"]
description = "A Rust proc-macro to generate Rust types from Prisma schema files."
license = "MIT"
readme = "README.md"
repository = "https://github.com/ShaunSHamilton/prisma-rust-schema/"
categories = ["api-bindings", "database", "development-tools::ffi"]
keywords = ["prisma", "rust"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.95"
quote = "1.0.40"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
syn = { version = "2.0.101", features = ["parsing"] }
psl = { git = "https://github.com/prisma/prisma-engines", version = "0.1.0", tag = "6.8.2", features = [
  "all",
] }
serde_tokenstream = "0.2.2"

[dev-dependencies]
bson = "2.15.0"
chrono = "0.4.37"
