[package]
name = "prisma-rust-schema"
version = "1.1.1"
edition = "2024"
authors = ["Shaun Hamilton <shauhami020@gmail.com>"]
description = "A Rust proc-macro to generate Rust types from Prisma schema files."
license = "MIT"
readme = "README.md"
repository = "https://github.com/ShaunSHamilton/prisma-rust-schema/"
categories = ["api-bindings", "database", "development-tools::ffi"]
keywords = ["prisma", "rust"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
syn = { version = "2", features = ["parsing"] }
psl = { git = "https://github.com/prisma/prisma-engines", version = "0.1.0", tag = "6.11.1", features = [
  "all",
] }
serde_tokenstream = "0.2.2"
reqwest = { version = "0.12", features = ["blocking"] }

[dev-dependencies]
bson = { version = "2.15.0", features = ["chrono-0_4"] }
chrono = "0.4.37"

[features]
default = ["bson"]
bson = []
chrono = []
